# bearing-data-leakage

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: feature_engineering.yaml  train.yaml
configs/collate/: mixup.yaml
configs/dataset/: cwru.yaml  ottawa.yaml  paderborn.yaml  synthetic.yaml
configs/experiment/: extract_features_cwru.yaml  extract_features_paderborn.yaml  old_extract_features_paderborn_v2.yaml
configs/feature_pipeline/: cwru_features.yaml  extract_psd.yaml  old_ottawa_features.yaml  old_paderborn_features.yaml  old_paderborn_features_v2.yaml  ottawa_features.yaml  paderborn_features.yaml
configs/hydra/: default.yaml
configs/modelmodule/: multiclass_attentioncnn.yaml  multiclass_cdcn.yaml  multiclass_wdcnn.yaml  multilabel_wdcnn.yaml  resnet18_multiclass.yaml
configs/trainer/: default.yaml
configs/transform/: cepstrogram.yaml  cepstrum.yaml  envelope.yaml  fft.yaml  mod_spectrogram.yaml  spectrogram.yaml  time.yaml
data/features/: cwru_features.pkl  cwru_features_segmented.pkl  ottawa_features_segmented.pkl  paderborn_features_segmented.pkl
notebooks/: feature_engineering.ipynb
notebooks/cwru/: shallow_models.ipynb
notebooks/ottawa/: shallow_models.ipynb
notebooks/paderborn/: shallow_models.ipynb
notebooks/toy_problem/: bearings.ipynb
src/: feature_extraction_pipeline.py  train.py
src/data/: custom_dataset.py  data_pipeline.py  data_splits.py  preprocess.py  pydantic_models.py
src/models/: model_pipeline.py  modelmodule.py
src/utils/: add_signal_data.py  hydra_decorators.py  logger.py
(+164 files in other folders)
