[project]
name = "bearing-data-leakage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autorootcwd>=1.0.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "lxml>=5.3.0",
    "pydantic>=2.10.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "sf-hamilton[visualization]>=1.86.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.4",
    "lightning>=2.5.0.post0",
    "torchmetrics>=1.6.1",
    "rootutils>=1.0.7",
    "seaborn>=0.13.2",
    "torchaudio>=2.6.0",
    "pywavelets>=1.8.0",
    "featureextraction",
    "featureextraction",
    "ipywidgets>=8.1.7",
    "soxr>=0.5.0.post1",
    "tabulate>=0.9.0",
]

[tool.ruff]
exclude = ["*.ipynb"]

[tool.uv.sources]
am-analysis = { git = "https://github.com/MuSAELab/amplitude-modulation-analysis-module" }
featureextraction = { git = "https://github.com/lva-dynamox-team/FeatureExtraction", rev = "dev" }
